syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.smarttutor";

package SmartTutor;

// The service definition.

// SmartTutor manages the.
// 
// The question service definition.
service DoubtsService {
  // This service will allow the user to get a reply for a question
	rpc StudentQuestion (RequestQuestion) returns (SmartAnswer);
}
   // message identifying the question
   message RequestQuestion {
     string question = 1;
   }

   // The response to the question
   message SmartAnswer {
     string answer = 1;
   }



service ReviewContentService {

   // for a specific subject get a stream of topic about the current content
//this service helps Students to review any content studied, what will reinforce what they learned

   rpc ReviewContent(RequestContent) returns (stream ContentReply); 
}
   // message identifying the content to be reviewed 
   message RequestContent {
     string content = 1;
   }

   // The response to the content
   message ContentReply {
     string reply = 1;
   }


service GradeEssayService {

  
  //for stream of a big file
//This service helps Students improve their writing abilities
  rpc StudentEssay(stream Essay) returns (EssayGraded);
}

   // message identifying the essay
   message Essay {
     string partEssay = 1;
   }

   // The response to the question
   message EssayGraded {
     string feedback = 1;
   }

service StudentQuizService {

  
  //for stream of questions and responses
  
  rpc SmartQuiz(stream QuizQuestions) returns (stream QuizAnswers);

  
}
// message identifying the questions of thew quiz
   message QuizQuestions {
     string question = 1;
   }

   // The response to the question
    message QuizAnswers {
    string answer = 1;
    bool answerCorrect = 2;
   }
